--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.js"
+      integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+      crossorigin="anonymous"
+    ></script>
     <title>Form</title>
     <style>
       * {
@@ -38,6 +42,36 @@
         padding: 20px;
         margin-top: 40px;
       }
+      .errorClass {
+        /* display: block; */
+        visibility: hidden;
+        text-decoration: none;
+        color: red;
+      }
+      .requiredField {
+        color: red;
+        left: 0%;
+      }
+      #firstName {
+       border: 1px solid red;
+       visibility: hidden;
+       /* border-color: aqua; */
+      }
+      #lastName {
+        border: 1px solid red;
+      }
+      #address {
+        border: 1px solid red;
+      }
+      #gender {
+        border: 1px solid red;
+      }
+      #date {
+        border: 1px solid red;
+      }
+      #myStateList {
+        border: 1px solid red;
+      }
     </style>
   </head>
   <body>
@@ -52,14 +86,30 @@
               class="form-control"
               id="firstName"
               aria-describedby="textHelp"
+              class="requiredField"
+              required
             />
+            <span
+              id="firstNameErr"
+              class="errorClass errLabel leftLabelErr"
+            ></span>
           </div>
           <div class="mb-2">
             <label for="lastName" class="form-label">Last Name</label>
-            <input type="text" class="form-control" id="lastName" />
+            <input type="text" class="form-control" id="lastName" required />
+            <span
+              id="lastNameErr"
+              class="errorClass errLabel leftLabelErr"
+            ></span>
           </div>
           <div class="mb-2">
             <label for="gender" class="form-label">Select Your Gender :</label>
+            <span
+              id="genderErr"
+              class="errorClass errLabel leftLabelErr"
+            ></span>
+            <!-- <span  id="lastNameErr" class="errorClass errLabel leftLabelErr"   ></span> -->
+
             <div class="form-check">
               <input
                 class="form-check-input"
@@ -79,7 +129,6 @@
                 name="gender"
                 value="Female"
                 id="female"
-                checked
               />
               <label class="form-check-label" for="female"> Female </label>
             </div>
@@ -90,8 +139,8 @@
                 name="gender"
                 value="Other"
                 id="other"
-                checked
               />
+
               <label class="form-check-label" for="other"> Other </label>
             </div>
           </div>
@@ -103,41 +152,44 @@
               class="form-control"
               id="date"
               aria-describedby="dateHelp"
+              required
             />
+            <span id="dateErr" class="errorClass errLabel leftLabelErr"></span>
           </div>
           <div class="mb-2">
-            <label class="form-check-label mb-2" for="state">
+            <label class="form-check-label mb-2" for="state" id="mystate">
               Select Your State :
             </label>
-
+            <span
+              id="myStateListErr"
+              class="errorClass errLabel leftLabelErr"
+            ></span>
             <select
               id="myStateList"
               class="form-select form-select-sm"
               onchange="getState()"
             >
-              <option disabled>---Choose city---</option>
-              <!-- <option value="punjab" >Punjab</option>
-              <option value="maharashtra">Maharashtra</option>
-              <option value="goa">Goa</option> -->
+              <option value="" selected disabled hidden>Select States</option>
             </select>
           </div>
           <div class="mb-2">
             <label class="form-check-label mb-2" for="city">
               Select Your City :
             </label>
-
+            <span id="cityErr" class="errorClass errLabel leftLabelErr"></span>
             <select id="myCityList" class="form-select form-select-sm">
-              <option disabled>---Choose city---</option>
-              <!-- <option value="mumbai">mumbai</option>
-              <option value="navimumbai">navi mumbai</option>
-              <option value="goa">goa</option>
-              <option value="kanvali">kaknvli</option> -->
+              <option value="" selected disabled hidden>Select City</option>
+             
             </select>
           </div>
 
           <div class="mb-2">
             <label for="address" class="form-label">Address</label>
             <textarea class="form-control" id="address" rows="2"></textarea>
+            <span
+              id="addressErr"
+              class="errorClass errLabel leftLabelErr"
+            ></span>
           </div>
 
           <button
@@ -146,6 +198,7 @@
             type="submit"
             class="btn btn-primary"
             style="width: 100%; border-radius: 20px"
+            value="submit"
           >
             Submit
           </button>
@@ -169,7 +222,16 @@
         <tbody id="myTable"></tbody>
       </table>
     </div>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
