--- a/index.html
+++ b/index.html
@@ -52,26 +52,7 @@
         color: red;
         left: 0%;
       }
-      #firstName {
-       border: 1px solid red;
-       visibility: hidden;
-       /* border-color: aqua; */
-      }
-      #lastName {
-        border: 1px solid red;
-      }
-      #address {
-        border: 1px solid red;
-      }
-      #gender {
-        border: 1px solid red;
-      }
-      #date {
-        border: 1px solid red;
-      }
-      #myStateList {
-        border: 1px solid red;
-      }
+       
     </style>
   </head>
   <body>
@@ -83,7 +64,7 @@
             <label for="firstName" class="form-label">First Name</label>
             <input
               type="text"
-              class="form-control"
+              class="form-control firstNameBorder"
               id="firstName"
               aria-describedby="textHelp"
               class="requiredField"
@@ -96,7 +77,7 @@
           </div>
           <div class="mb-2">
             <label for="lastName" class="form-label">Last Name</label>
-            <input type="text" class="form-control" id="lastName" required />
+            <input type="text" class="form-control lastNameBorder" id="lastName" required  />
             <span
               id="lastNameErr"
               class="errorClass errLabel leftLabelErr"
@@ -149,7 +130,7 @@
             <label for="date" class="form-label">Date Of Birth</label>
             <input
               type="date"
-              class="form-control"
+              class="form-control dateBorder"
               id="date"
               aria-describedby="dateHelp"
               required
@@ -166,7 +147,7 @@
             ></span>
             <select
               id="myStateList"
-              class="form-select form-select-sm"
+              class="form-select form-select-sm myStateListBorder"
               onchange="getState()"
             >
               <option value="" selected disabled hidden>Select States</option>
@@ -177,7 +158,7 @@
               Select Your City :
             </label>
             <span id="cityErr" class="errorClass errLabel leftLabelErr"></span>
-            <select id="myCityList" class="form-select form-select-sm">
+            <select id="myCityList" class="form-select form-select-sm myCityListBorder">
               <option value="" selected disabled hidden>Select City</option>
              
             </select>
