--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
       crossorigin="anonymous"
     ></script>
+    <script src="https://kit.fontawesome.com/16acca2523.js" crossorigin="anonymous"></script>
     <title>Form</title>
     <style>
       * {
@@ -52,7 +53,9 @@
         color: red;
         left: 0%;
       }
-       
+       span{
+         font-size: .8rem;
+       }
     </style>
   </head>
   <body>
@@ -157,7 +160,7 @@
             <label class="form-check-label mb-2" for="city">
               Select Your City :
             </label>
-            <span id="cityErr" class="errorClass errLabel leftLabelErr"></span>
+            <span id="myCityListErr" class="errorClass errLabel leftLabelErr"></span>
             <select id="myCityList" class="form-select form-select-sm myCityListBorder">
               <option value="" selected disabled hidden>Select City</option>
              
